Switch from youtube-dl to youtube-dlc

--- a/ydl_server/templates/footer.html
+++ b/ydl_server/templates/footer.html
@@ -1,5 +1,5 @@
     <footer class="footer text-light text-center">
-      <p class="text-muted">Powered by <a class="text-light" href="https://rg3.github.io/youtube-dl/">youtube-dl</a> version <a href="#" onclick="ydl_update()" data-toggle="tooltip" data-placement="top" title="Update youtube-dl" class="text-light">{{ ydl_version }}</a>.
+      <p class="text-muted">Powered by <a class="text-light" href="https://github.com/blackjack4494/yt-dlc">youtube-dlc</a> version <a href="#" onclick="ydl_update()" data-toggle="tooltip" data-placement="top" title="Update youtube-dl" class="text-light">{{ ydl_version }}</a>.
       Code &amp; issues on <a class="text-light" href="https://github.com/nbr23/youtube-dl-server">GitHub</a>. Forked from <a class="text-light" href="https://github.com/manbearwiz/youtube-dl-server">@manbearwiz</a>.
       </p>
     </footer>
