add two formats (480p and 720p), set 480p as default

--- a/ydl_server/templates/index.html
+++ b/ydl_server/templates/index.html
@@ -21,6 +21,8 @@
                   <option value="video/ogg">Ogg</option>
                   <option value="video/mkv">Matroska (MKV)</option>
                   <option value="video/avi">AVI</option>
+                  <option selected="selected" value="video/135+140">480p</option>
+                  <option value="video/136+140">720p</option>
                 </optgroup>
                 <optgroup label="Audio">
                   <option value="audio/bestaudio">Best Audio</option>
